--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> lojinha bom preço fantasias de halloew </title>
-</head>
-<body>
-    <p>
-
- A loja de fantasias se localiza na rua RIO DE JANEIRO NUMERO 1234,temos varias peças para voce encontar sua fantasia ideal e arrasar com seus amigos, se voce convidar mais 5 amigos para comprar junto com voce ganha uma fantasia gratis entao corra adquirir nessa semana estaremos aberto ate as 22 horas.
+    <title>loja de roupas e calçados caziuk
 
 
-    </p>
+
+
+    </p>olá meninas acabamos de inaugurar a nossa nova loja aqui na rua Rio de Janeiro N 1234,aqui voce voce vai 
+    encontrar aquele look para sua balada no fim de semana para voce arrasar temos vestidos,body,
+    lindas camisetas com a qualidade que voce procura além disso temos saltos,botas e varios
+    modelinhos de tenis muito estilosos e tudo no preço que cabe no seu bolso,parcelamos no cartão
+    em ate 10x sem juros e se voce trazer mais uma amiga para comprar com voce ganha 50% de desconto 
+    na suas cmpras
+então não perca tempo corra logo pra cá</p>
+
+
 </body>
 </html>
